fix sonar, add math, add standard validation test to all libs